src/test/ui/issues/issue-57676.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57676.rs:12:19
   |
LL |     let d: Path = Path::new(".");
   |                   ^^^^^^^^^^^^^^ expected struct `std::path::Path`, found reference
   |
   = note: expected type `std::path::Path`
              found type `&std::path::Path`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/issue-57676.rs:12:9
   |
LL |     let d: Path = Path::new(".");
   |         ^ borrow the `Path` instead
   |
   = help: within `std::path::Path`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `std::path::Path`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to 2 previous errors

Some errors occurred: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
